--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,9 @@ body{
     background-image: url("../images/background.jpg");
     background-repeat: repeat;
 }
+
+.btn{
+    margin: 0 0 1em 0;
+    background: black;
+    border-color: gray;
+}
